examples/errors/MultipleSignatures.con
clone :: Integer -> Integer .
clone x = x .

clone :: Integer -> Integer .
